--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,27 +12,29 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <link rel="stylesheet" href="style/styleCss.css"/>
 </head>
-<body>
+<body class="home">
 	
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Lista de Eventos</a>
+		      <a class="brand-logo">Sistema para Cadastro de Eventos e Convidados</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Evento</a></li>
+		         <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>CADASTRAR EVENTOS</a></li>
+		         <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>lISTA DE EVENTOS</a></li>
 		      </ul>
 		    </div>
 		</nav>
 	
 	</header>
 	
-	<h1>Sistema para cadastro de eventos!</h1>
-	<h3>Faça seu Login e cadastre seus eventos e listas de convidados!</h3>
+	<span><img src="assets/img/eventos.jpg" alt=" "></span>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
 </body>
-
+ <footer class="page-footer">
+	<p>By Antonio Bruno - Copy Right - APP EVENTOS 2021</p>
+        </footer>
 
 </html>
