--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -18,9 +18,11 @@
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Evento</a>
+		      <a  class="brand-logo">Detalhes do Evento</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
+		         <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>HOME</a></li>
+		         <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>CADASTRAR EVENTOS</a></li>
+		         <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>lISTA DE EVENTOS</a></li>
 		      </ul>
 		    </div>
 		</nav>
