--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -17,9 +17,10 @@
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Cadastro de Eventos:</a>
+		      <a  class="brand-logo">Cadastro de Eventos</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Eventos</a></li>
+		        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>HOME</a></li>
+		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>lISTA DE EVENTOS</a></li>
 		      </ul>
 		    </div>
 		</nav>
