--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -17,8 +17,9 @@
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Lista de Eventos</a>
+		      <a  class="brand-logo">Lista de Eventos</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons left">home</i>HOME</a></li>
 		        <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar evento</a></li>
 		      </ul>
 		    </div>
