Deploy Ajustes Footer

--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -69,6 +69,8 @@
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
 </body>
-
+ <footer class="page-footer">
+	<p>By Antonio Bruno - Copy Right - APP EVENTOS 2021</p>
+ </footer>
 
 </html>
