--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -50,6 +50,8 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
-
+ <footer class="page-footer">
+	<p>By Antonio Bruno - Copy Right - APP EVENTOS 2021</p>
+ </footer>
 
 </html>
