--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -40,7 +40,7 @@
 				Data: <input type="date" value="" name="data"/>
 			</div>
 			<div class="input-field col s3">
-				Horario: <input type="time" value="" name="horario"/>
+				Horario: <input type="time" id="appt"  min="09:00" max="23:00" required name="horario"/>
 			</div>
 		</div>
 		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
