--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,10 +17,11 @@
 	<header>
 		<nav class="menu">
 		    <div class="nav-wrapper">
-		      <a class="brand-logo">Sistema para Cadastro de Eventos e Convidados</a>
+		    <img th:src="@{assets/img/logo1.jpg}" style="height: 4rem; width: 4rem; display: flex; border: none; box-shadow: none; padding: initial; margin: 0px 5px 3px 13px " alt="mastercard" ></img>
+		      <p class="brand-logo" style="margin: -65px 5px 3px 123px">Sistema para Cadastro de Eventos e Convidados</p>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		         <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>CADASTRAR EVENTOS</a></li>
-		         <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>lISTA DE EVENTOS</a></li>
+		         <li><a href="/cadastrarEvento" class="waves-effect waves-light btn" style="margin: -125px 35px 3px 0px"><i class="material-icons left">add_circle_outline</i>CADASTRAR EVENTOS</a></li>
+		         <li><a href="/eventos" class="waves-effect waves-light btn" style="margin: -125px 65px 3px 13px"><i class="material-icons left">format_list_bulleted</i>lISTA DE EVENTOS</a></li>
 		      </ul>
 		    </div>
 		</nav>
