--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -48,6 +48,15 @@
 	
 	</table>
 
+		<ul class="pagination">
+		    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+		    <li class="active"><a href="#!">1</a></li>
+		    <li class="waves-effect"><a href="#!">2</a></li>
+		    <li class="waves-effect"><a href="#!">3</a></li>
+		    <li class="waves-effect"><a href="#!">4</a></li>
+		    <li class="waves-effect"><a href="#!">5</a></li>
+		    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+		  </ul>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
@@ -56,4 +65,9 @@
 	<p>By Antonio Bruno - Copy Right - APP EVENTOS 2021</p>
  </footer>
 
+
+
 </html>
+
+
+
