--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -20,17 +20,11 @@
 	<header>
 		<nav class="menu">
 			<div class="nav-wrapper">
-				<a class="brand-logo">Detalhes do Evento</a>
+				<a href="/" class="brand-logo">SISTEMA DE EVENTOS</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="/" class="waves-effect waves-light btn"><i
-							class="material-icons left">home</i>HOME</a></li>
-					<li><a href="/cadastrarEvento"
-						class="waves-effect waves-light btn"><i
-							class="material-icons left">add_circle_outline</i>CADASTRAR
-							EVENTOS</a></li>
-					<li><a href="/eventos" class="waves-effect waves-light btn"><i
-							class="material-icons left">format_list_bulleted</i>lISTA DE
-							EVENTOS</a></li>
+					<li><a href="/"><i class="material-icons left">home</i>HOME</a></li>
+					<li><a href="/cadastrarEvento"><i class="material-icons left">add_circle_outline</i>CADASTRAR EVENTOS</a></li>
+					<li><a href="/eventos"><i class="material-icons left">format_list_bulleted</i>LISTA DE EVENTOS</a></li>
 				</ul>
 			</div>
 		</nav>
