--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+<link rel="icon" href="data:,">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>EventosApp</title>
 <!--Import Google Icon Font-->
