--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -13,8 +13,8 @@
 	href="materialize/css/materialize.min.css" media="screen,projection" />
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="style/style.css" />
 
+<link rel="stylesheet" href="style/style.css" />
 </head>
 <body style="padding-top: 80px;">
 
@@ -34,8 +34,8 @@
 
 	</header>
 	<div class="titulo">LISTA DE EVENTOS</div>
-	
-	<table class="container" >
+
+	<table class="container">
 		<thead>
 			<tr>
 				<th>NOME</th>
@@ -46,35 +46,45 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="evento : ${listEventos}" style="cursor:default" onMouseOver="javascript:this.style.backgroundColor='#E8E8E8'" onMouseOut="javascript:this.style.backgroundColor=''">
-				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
-				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.local}"></span></a></td>
-				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.data}" ></span></a></td>
-				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.horario}"></span></a></td>
+			<tr th:each="evento : ${listEventos}" style="cursor: default"
+				onMouseOver="javascript:this.style.backgroundColor='#E8E8E8'"
+				onMouseOut="javascript:this.style.backgroundColor=''">
+				<td><a
+					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
+						th:text="${evento.nome}"></span></a></td>
+				<td><a
+					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
+						th:text="${evento.local}"></span></a></td>
+				<td><a
+					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
+						th:text="${evento.data}"></span></a></td>
+				<td><a
+					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
+						th:text="${evento.horario}"></span></a></td>
 				<td><a class="waves-effect waves-light btn-small"
 					th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.codigo)).build()}"><i
 						class="material-icons left">delete</i></a></td>
 			</tr>
 		</tbody>
 	</table>
-				<div class="row">
-				<div class="col-md-2"></div>
-				<div class="col-md-8">
-						<ul class="pagination justify-content-center">
-							<li class="page-item" th:classappend="${prev == 0 ? 'disabled': ''}">
-								<a class="page-link" th:href="@{|/?page=${prev}|}">Anterior</a>
-							</li>
-							<li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active': ''}">
-								<a class="page-link" th:href="@{|/?page=${page}|}" th:text="${page}"></a>
-							</li>
-							<li class="page-item" th:classappend="${current == last ? 'disabled': ''}">
-								<a class="page-link" th:href="@{|/?page=${next}|}">Seguinte</a>
-							</li>
-						</ul>
-				</div>
-				<div class="col-md-2"></div>
-			</div>
-	
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+			<ul class="pagination justify-content-center">
+				<li class="page-item" th:classappend="${prev == 0 ? 'disabled': ''}">
+					<a class="page-link" th:href="@{|/?page=${prev}|}">Anterior</a>
+				</li>
+				<li class="page-item" th:each="page : ${pages}"
+					th:classappend="${current == page ? 'active': ''}"><a
+					class="page-link" th:href="@{|/?page=${page}|}" th:text="${page}"></a>
+				</li>
+				<li class="page-item"
+					th:classappend="${current == last ? 'disabled': ''}"><a
+					class="page-link" th:href="@{|/?page=${next}|}">Seguinte</a></li>
+			</ul>
+		</div>
+		<div class="col-md-2"></div>
+	</div>
 	<script type="text/javascript"
 		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
