--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -33,8 +33,7 @@ span {
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
-    padding: 2px 10em 0 1em;
     color: #26a69a;
+    padding: 4px 0 2px 0;
 }
-
 
