--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -13,7 +13,7 @@
 	href="materialize/css/materialize.min.css" media="screen,projection" />
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<link rel="stylesheet" href="css/bootstrap.css" />
 <link rel="stylesheet" href="style/style.css" />
 </head>
 <body style="padding-top: 80px;">
@@ -38,35 +38,36 @@
 	<table class="container">
 		<thead>
 			<tr>
-				<th>NOME</th>
-				<th>LOCAL</th>
-				<th>DATA</th>
-				<th>HORARIO</th>
-				<th>DELETAR</th>
+				<th class="header">NOME</th>
+				<th class="header">LOCAL</th>
+				<th class="header">DATA</th>
+				<th class="header">HORARIO</th>
+				<th class="header">DELETAR</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="evento : ${listEventos}" style="cursor: default"
+			<tr th:each="evento : ${listEventos}" class="border border-primary" style="cursor: default"
 				onMouseOver="javascript:this.style.backgroundColor='#E8E8E8'"
 				onMouseOut="javascript:this.style.backgroundColor=''">
-				<td><a
-					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
-						th:text="${evento.nome}"></span></a></td>
-				<td><a
-					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
-						th:text="${evento.local}"></span></a></td>
-				<td><a
-					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
-						th:text="${evento.data}"></span></a></td>
-				<td><a
-					th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span
-						th:text="${evento.horario}"></span></a></td>
-				<td><a class="waves-effect waves-light btn-small"
-					th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.codigo)).build()}"><i class="material-icons left">delete</i></a></td>
+				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
+				<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.local}"></span></a></td>
+				<td class="detail"><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.data}"></span></a></td>
+				<td class="detail"><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.horario}"></span></a></td>
+				<td class="detail"><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.codigo)).build()}"><i class="material-icons left">delete</i></a></td>
 			</tr>
 		</tbody>
-
 	</table>
+	<div class="container">
+		<nav aria-label="Page navigation example">
+			<ul class="pagination">
+				<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+				<li class="page-item"><a class="page-link" href="#">1</a></li>
+				<li class="page-item"><a class="page-link" href="#">2</a></li>
+				<li class="page-item"><a class="page-link" href="#">3</a></li>
+				<li class="page-item"><a class="page-link" href="#">Next</a></li>
+			</ul>
+		</nav>
+	</div>
 	<script type="text/javascript"
 		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
