--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -10,11 +10,11 @@
 	rel="stylesheet" />
 <!--Import materialize.css-->
 <link type="text/css" rel="stylesheet"
-	href="materialize/css/materialize.min.css" media="screen,projection" />
+	href="/materialize/css/materialize.min.css" media="screen,projection" />
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="css/bootstrap.css" />
-<link rel="stylesheet" href="style/style.css" />
+<link rel="stylesheet" href="/css/bootstrap.css" />
+<link rel="stylesheet" href="/style/style.css" />
 </head>
 <body style="padding-top: 80px;">
 
