--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -34,18 +34,10 @@
 	<div th:each="evento : ${evento}" class="container detalhesEvento">
 		<h5>Detalhes do Evento</h5>
 		<div class="row">
-			<p>
-				Nome: <span th:text="${evento.nome}"></span>
-			</p>
-			<p>
-				Local: <span th:text="${evento.local}"></span>
-			</p>
-			<p>
-				Data: <span th:text="${evento.data}"></span>
-			</p>
-			<p>
-				Horario: <span th:text="${evento.horario}"></span>
-			</p>
+			<p>Nome: <span th:text="${evento.nome}"></span></p>
+			<p>Local: <span th:text="${evento.local}"></span></p>
+			<p>Data: <span th:text="${evento.data}"></span></p>
+			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
 	</div>
 
