--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<link rel="icon" href="data:,">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>EventosApp</title>
-<!--Import Google Icon Font-->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet" />
-<!--Import materialize.css-->
-<link type="text/css" rel="stylesheet"
-	href="materialize/css/materialize.min.css" media="screen,projection" />
+	<title>EventosApp</title>
+	 <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
 
-<!--Let browser know website is optimized for mobile-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="style/style.css" />
-<link type="text/css" rel="stylesheet" href="{% static 'competition/materialize.css' %}"/>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-   
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel="stylesheet" href="/style/styleCss.css"/>
 </head>
 <body style="padding-top: 80px;">
 
 	<header style="width: 100%; position: fixed; top: 0;">
-
-
 		<nav>
 			<div class="nav-wrapper">
 				<a href="/" class="brand-logo">SISTEMA DE EVENTOS</a>
@@ -34,10 +25,9 @@
 			</div>
 		</nav>
 	</header>
-	<span><img src="assets/img/eventos.jpg" alt=" "></span>
+	<span><img src="/assets/img/eventos.jpg" alt=" "></span>
 
-	<script type="text/javascript"
-		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
 
 </body>
