--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 	<header style="width: 100%; position: fixed; top: 0;">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="/" class="brand-logo">SISTEMA DE EVENTOS</a>
+				<a href="#" class="brand-logo">SISTEMA DE EVENTOS</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="/cadastrarEvento">CADASTRAR EVENTOS<i class="material-icons left">add_circle_outline</i></a></li>
 					<li><a href="/eventos">LISTA DE EVENTOS<i class="material-icons left">format_list_bulleted</i></a></li>
